astro-solidjs/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astro-solidjs
  namespace: ecommercedemo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - astro-solidjs.cloud.onlinedigital.ro
    secretName: astro-solidjs-tls
  rules:
    - host: astro-solidjs.cloud.onlinedigital.ro
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: astro-solidjs
                port:
                  number: 8080
